return only 90 deg directions from get90Directions method